Update /logout to reflect that auth is expected

--- a/APISPEC.yaml
+++ b/APISPEC.yaml
@@ -105,6 +105,8 @@ paths:
   /logout:
     post:
       summary: Log out a user
+      security:
+        - JWTAuth: []
       responses:
         "200":
           description: Logged out successfully
